# lingmo-appearance

./: CMakeLists.txt  DarklyConfig.cmake.in  README.md  flake.nix
.github/workflows/: build.yml  upload.yml
colors/: CMakeLists.txt  Lingmo.colors
debian/: changelog  control  copyright  rules
kdecoration/: CMakeLists.txt  darkly.h  darkly.json  darklybutton.cpp  darklybutton.h  darklydecoration.cpp  darklydecoration.h  darklyexceptionlist.h  darklysettingsdata.kcfg  darklysettingsprovider.cpp  darklysettingsprovider.h
kdecoration/config/: CMakeLists.txt  darklyconfigwidget.cpp  kcm_darklydecoration.cpp  kcm_darklydecoration.json  lingmoappearance-decorationconfig.desktop
kstyle/: CMakeLists.txt  darkly.h  darkly.json  darkly.kcfg  darklyblurhelper.cpp  darklyblurhelper.h  darklyhelper.cpp  darklyhelper.h  darklymdiwindowshadow.cpp  darklyshadowhelper.cpp  darklyshadowhelper.h  darklystyle.cpp  darklystyle.h  darklystyleplugin.cpp  darklytoolsareamanager.cpp  darklytoolsareamanager.h  darklywindowmanager.cpp  darklywindowmanager.h  lingmo.themerc
kstyle/animations/: darklyscrollbardata.cpp  darklyscrollbardata.h  darklyscrollbarengine.cpp  darklyscrollbarengine.h
kstyle/config/: CMakeLists.txt  darklystyleconfig.cpp  darklystyleconfig.h  darklystyleconfigmodule.cpp  lingmostyleconfig.json  main.cpp
kstyle/config/ui/: darklystyleconfig.ui
kstyle/tests/: CMakeLists.txt  blurhelper_test.cpp  dolphinviewopacity_test.cpp  styleconfig_test.cpp
libdarklycommon/: CMakeLists.txt  darklyboxshadowrenderer.cpp  darklyboxshadowrenderer.h
nix/: package.nix
packaging/rpm/: lingmo-appearance.spec
